chatappjs/src/routes/style.css
:root {
  --font-body: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  --font-mono: "Fira Mono", monospace;

  --default-padding: 2rem;
  --small-padding: 0.75rem;
  --smaller-padding: 0.3rem;

  --input-border-color: #dadada;
  --cor-confirmar: #c6ffd5;
  --cor-confirmar-high: #a0e4b2;
  --cor-em-confirmar: #0c4000;

  --cor-secundaria: #f4f4f4;
  --cor-secundaria-high: #c9c9c9;

  --arredondamento: 0.25rem;
  --arredondamento-m: 0.5rem;

  /* font-family: var(--font-body); */
  color: var(--color-text);
}

*,
*::after {
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
}
p {
  margin: 0;
}

html {
  height: 100%;
}
body {
  display: flex;
  padding: 0;
  margin: 0;
  height: 100%;
  width: 100%;
  justify-content: center;
}

#page {
  display: flex;
  flex-direction: row;
  width: 100%;
  /* max-width: 1080px; */
}

.section-header {
}

.section-header,
.section-footer {
  background-color: var(--cor-secundaria);

  display: flex;
  /* padding: var(--default-padding); */
  padding: var(--small-padding);
  gap: var(--small-padding);
  align-items: center;
  min-height: 80px;
}

#curr-chat,
#chats {
  display: flex;
  flex-direction: column;
  position: relative;
  /* padding: var(--small-padding); */
  overflow: hidden;
  min-width: fit-content;
}

#curr-chat-messages-holder {
  position: relative;
}

#aviso-container {
  display: flex;
  position: absolute;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
}

#aviso {
  background-color: white;
  padding: 1rem;
  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
}

#aviso-container.hidden {
  pointer-events: none;
}

@keyframes popup {
  0% {
    opacity: 0;
    transform: translateY(100%);
  }
  100% {
    transform: translateY(0%);
  }
}
@keyframes popdown {
  0% {
    opacity: 1;
    transform: translateY(0%);
  }
  100% {
    opacity: 0;
    transform: translateY(100%);
  }
}

#aviso-container.hidden > * {
  /* opacity: 0; */
  animation: popdown 250ms;
  transform: translateY(100%);
  opacity: 0;
}

.notransition * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -o-transition: none !important;
  transition: none !important;
  animation: none !important;
}

#img-curr-chat {
  width: 2rem;
  min-width: 2rem;
  aspect-ratio: 1;

  border-radius: 100%;
  background-color: grey;
}

#curr-chat {
  /* box-shadow: -1px 1px 4px 1px rgba(0, 0, 0, 0.1); */
  width: 100%;
}

#curr-chat-header {
  width: 100%;
}

#curr-chat-desc {
  display: flex;
  gap: 1rem;
  padding: var(--small-padding);

  border-radius: var(--arredondamento);

  align-items: center;
}

#curr-chat-online-holder {
  margin-left: auto;
}

#curr-chat-info {
  display: flex;
  flex-direction: column;
}

.chat-users {
  font-size: 12px;
}

#chats-footer {
  justify-content: center;
}

#curr-chat-messages-holder {
  height: 100%;
  display: flex;
  flex-direction: column;

  gap: var(--small-padding);
  padding: var(--small-padding);

  overflow-x: hidden;
}

#chats-holder {
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: var(--small-padding);
  padding: var(--small-padding);
}

@keyframes new-message-right {
  from {
    transform: translateX(-100%);
    opacity: 0%;
  }
  to {
    transform: translate(0%);
    opacity: 100%;
  }
}

@keyframes new-message-left {
  from {
    transform: translateX(100%);
    opacity: 0%;
  }
  to {
    transform: translateX(0%);
    opacity: 100%;
  }
}

.msg-card {
  display: flex;
  flex-direction: column;
  background-color: var(--cor-secundaria);
  width: fit-content;
  padding: var(--small-padding);
  border-radius: var(--arredondamento);

  animation: new-message-right 150ms linear;
}
.msg-card.owned {
  align-self: end;
  background-color: var(--cor-confirmar);
  color: var(--cor-em-confirmar);
  animation: new-message-left 150ms linear;
}

input {
  /* padding: var(--default-padding); */
  min-width: fit-content;
  width: 100%;
  padding: var(--small-padding);
  border: 0;
  border-bottom: 1px solid var(--input-border-color);
  outline: 0;
  background-color: transparent;
}

#send-message {
  width: 100%;
}

#send-message-button {
  background-color: var(--cor-confirmar);
  color: var(--cor-em-confirmar);
}
#send-message-button:hover {
  background-color: var(--cor-confirmar-high);
}

button {
  border-radius: var(--arredondamento);
  padding: var(--small-padding);
  border: none;
  cursor: pointer;
  background-color: var(--cor-secundaria);
}
.text-button {
  border-radius: 0;
  padding: 0;
  border: none;
  background-color: transparent;
  font-size: 16px;
}
.text-button:hover {
  color: rgb(84, 105, 199);
  background-color: transparent;
}

button:hover {
  background-color: var(--cor-secundaria-high);
}

#chats {
  width: 100%;

  transition: 150ms;
  max-width: max-content;
  min-width: 0;
}

#chats.hidden {
  max-width: 0;
  display: none;
}

#chats-holder {
  display: flex;
}

#chats-header {
  justify-content: center;
  font-weight: bold;
}

#chats-holder {
  /* padding: var(--default-padding); */
}

.chat-card {
  width: 100%;
  background-color: var(--cor-secundaria);
  padding: var(--small-padding);
  border-radius: var(--arredondamento);
}
.chat-card:hover {
}

.chat-card-header {
  display: flex;
}

.chat-card-name,
.msg-card-name {
  font-weight: bold;
}

.chat-card-footer,
.msg-card-footer {
  display: flex;
  align-items: end;
  gap: var(--smaller-padding);
}

.chat-card-time,
.msg-card-time {
  font-size: 12px;
}

.chat-card-status-name {
  font-weight: bold;
}
.chat-card-status {
}

#chat-search-holder,
#chat-create-holder {
  display: flex;
  gap: var(--small-padding);
}

#perfil-chat-container {
  width: fit-content;
  position: absolute;
  padding: var(--small-padding);

  z-index: 10;
}

#perfil-chat-container > * {
  box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.1);
  border-radius: var(--arredondamento-m);
}
#perfil-chat-container.hidden > * {
  box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0);
}

#perfil-chat-container.hidden {
  pointer-events: none;
}

#perfil-chat {
  /* position: absolute; */
  display: flex;
  flex-direction: column;
  gap: var(--small-padding);
  background-color: white;

  border-radius: var(--arredondamento-m);

  padding: var(--small-padding);

  transition: 150ms;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

#perfil-chat > * {
  min-width: fit-content;
  white-space: nowrap;
}

.hidden #perfil-chat {
  height: 0%;
  padding: 0%;

  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0);
}

.hidden #perfil-chat * {
  opacity: 0%;
}

#perfil-chat-header {
  display: flex;
  align-items: center;
  gap: var(--small-padding);

  transition: 150ms;
}

#perfil-titulo-holder {
  width: 100%;
}

#perfil-chat-titulo {
  font-size: 16px;
}

#perfil-data-criada {
  font-size: 12px;
}

#perfil-aba-participantes {
  margin-top: var(--small-padding);
}

@media (max-width: 700px) {
  #chats {
    position: absolute;
    background-color: white;
    z-index: 20;
    height: 100%;
    box-shadow: 3px 0px 4px 1px rgba(29, 29, 29, 0.15);
    min-width: 100%;
  }
  #page-shadow {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
  }
}

